fix an issue in cleanup service